# latencytool-test

./: .gitignore  CMakeLists.txt  README.md  package.xml
cmake/: Config.cmake.in
include/: image_converter.h
src/: backend_cuda.cpp  backend_opencv.cpp  common.c  frontend_qt.cpp  image_converter.cpp
test_record/: latency_test_1_term_in_desktop_mode_cvCapturer.txt  latency_test_1_term_in_pure_mode_cvCapturer.txt  latency_test_2_term_in_desktop_mode_cvCapturer.txt  latency_test_2_term_in_pure_mode_cvCapturer.txt  latency_test_3_term_in_pure_mode_cvCapturer.txt.txt
